--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
   "babel": {
     "presets": [
       "es2015",
-      "react"
+      "react",
+      "stage-1"
     ]
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
