--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
         "no-param-reassign": 0,
         "no-shadow": 0,
         "no-use-before-define": 0,
-        'new-cap': 0,
+        "new-cap": 0,
         "no-console": 2
     }
 }
